--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -442,6 +442,10 @@ body {
     margin: 25px;
     font-size: 28px;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .edit-screen div h4 {
@@ -498,6 +502,51 @@ body {
     color: var(--quinary-color);
 }
 
-.hide {
+.hideThis {
     display: none;
+}
+
+.searched-cards-container,
+.user-cards-container {
+    justify-content: center;
+}
+
+.card_container {
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    max-height: 500px;
+    margin: 0;
+}
+.searched_card,
+.user_card {
+    border: solid 3px var(--tertiary-color);
+    border-radius: 6px;
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    float: left;
+    overflow-y: scroll;
+    height: 400px;
+}
+
+.magic_title,
+.yugi_title,
+.poke_title {
+    font-size: 24px;
+
+}
+
+.magic_p,
+.yugi_p,
+.poke_p {
+    font-size: 20px;
+    text-align: left;
+    width: 100%;
+}
+
+.magic_btn,
+.yugi_btn,
+.poke_p {
+
+    
 }
