--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
     <link rel="stylesheet" href="/stylesheets/style.css">
+	<script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js"></script>
 	<title>Table Top Warriors</title>
 </head>
 
