add card style and fix

--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -28,8 +28,8 @@
     <div class="user-cards-container">
     {{#if cards.length}}
         <h2>Your cards</h2>
-        <div class="card-container">
-            <div class="user-card">
+        <div>
+            <div>
             {{#each cards as |card|}}
 
                 {{>card-info card}}
