--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -522,10 +522,11 @@ body {
 }
 
 .card_container {
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     max-width: 500px;
-    max-height: 500px;
+    height: fit-content;
     margin: 0;
 }
 .searched_card,
@@ -535,7 +536,7 @@ body {
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
     padding: 10px;
     float: left;
-    height: 400px;
+    height: fit-content;
 }
 
 .magic_title,
