--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -8,7 +8,7 @@
 
     <form class="new-card-form">
         <label for="card-name">Card Search:</label>
-        <input type="text" id="card-name" name="card-name" value="Enter card name here" />
+        <input type="text" id="card-name" name="card-name" placeholder="Enter card name here" />
         <h4>Type a word, phrase, or full card name and hit enter to search</h4>
         <br>
         <button type="submit">Search</button>
