--- a/views/partials/card-info.handlebars
+++ b/views/partials/card-info.handlebars
@@ -52,49 +52,49 @@
                 <button type="button" class="delete-card-btn" id="{{id}}">Delete Card</button>
             {{/if}}
             {{#if pokes}}
-                <p>
+                <p class="poke_p">
                     HP: {{pokes.0.hpPoke}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Supertype: {{pokes.0.supertypePoke}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Type(s): {{pokes.0.typesPoke}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Subtype(s): {{pokes.0.subtypesPoke}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Evolves to: {{pokes.0.evolvesToPoke}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Ability name(s): {{pokes.0.abilitiesPoke.0.name}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Ability text(s): {{pokes.0.abilitiesPoke.0.text}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Ability type(s): {{pokes.0.abilitiesPoke.0.type}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Attack name(s): {{pokes.0.attacksPoke.0.name}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Attack cost(s): {{pokes.0.attacksPoke.0.cost}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Attack converted energy cost(s): {{pokes.0.attacksPoke.0.convertedEnergyCost}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Attack damage(s): {{pokes.0.attacksPoke.0.damage}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Attack text(s): {{pokes.0.attacksPoke.0.text}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Weaknesses: {{pokes.0.weaknessesPoke.0.type}} {{pokes.0.weaknessesPoke.0.value}}
                 </p>
-                <p>
+                <p class="poke_p">
                     Retreat cost: {{pokes.0.retreatCostPoke}}
                 </p>
                 <button type="button" class="delete-card-btn" id="{{id}}">Delete Card</button>
