--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -96,6 +96,13 @@ body {
     margin-right: auto;
 }
 
+.forms {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .login-form {
     background-color: var(--quinary-color);
