--- a/views/deck-creation.handlebars
+++ b/views/deck-creation.handlebars
@@ -1,3 +1,7 @@
+<div>
+    <image src="../images/Table-Top-Warriors-Logo.png" alt="TTW Logo" id="main-logo" />
+</div>
+
 <form class="new-deck-form">
     <label for="game-name">Choose a Game:</label>
     <select name="game-name" id="game-name">
@@ -9,7 +13,7 @@
     <label for="deck-name">Deck Name:</label>
     <input type="text" id="deck-name" name="deck-name">
     <br>
-    <button type="submit">Create Deck</button>
+    <button type="submit" id="create-deck-btn">Create Deck</button>
 </form>
-
+    
 <script src="/javascript/add-deck.js"></script>
