--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -46,3 +46,4 @@
 <script src="/javascript/add-card.js"></script>
 <script src="/javascript/delete-card.js"></script>
 <script src="/javascript/edit-deck.js"></script>
+{{!-- <script src="/javascript/hide-card.js"></script> --}}
